# raspipico_for_msx

pico_firmware/: CMakeLists.txt  cmake_rebuild.bat  raspipico_for_msx_auto_set_url.cmake
pico_firmware/gpio_test/: CMakeLists.txt  main.cpp
pico_firmware/gpio_test2/: CMakeLists.txt  main.cpp
pico_firmware/megacon_k_type_compatible/: ATTENTION.txt  CMakeLists.txt  main.cpp  pio_bank_address.pio  pio_bank_write.pio  pio_we_oe.pio
pico_firmware/megacon_k_type_compatible/doc/: megacon_k_type_compatible.vsdx  ~$$megacon_k_type_compatible.~vsdx
pico_firmware/megacon_k_type_test/: CMakeLists.txt  main.cpp  readme.txt
pico_firmware/pio_test/: CMakeLists.txt  main.cpp  pio_test.pio
